--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,18 @@
+@font-face{
+    src: url(fonts/UbuntuMono-Regular.ttf);
+    font-family: monospace-regular;
+}
+
+@font-face{
+    src: url(fonts/UbuntuMono-Bold.ttf);
+    font-family: monospace-bold;
+}
+
 body{
     background: #222222;
     margin: 0;
+    font-family: monospace-regular;
+    color: #d6cab8;
 }
 
 .container{
@@ -119,5 +131,62 @@ body{
 .test{
     p{
         font-size: 70px;
+    }
+}
+
+.start{
+    background: #575757;
+    border-radius: 500px 0 0 500px;
+    margin-left: 30px;
+    backdrop-filter: blur(8px);
+
+    &__box{
+        // background: #575757;
+        border-radius: 500px 0 0 500px;
+        padding: 80px 0 120px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 70px;
+        backdrop-filter: blur(8px);
+    }
+
+    &__circle{
+        position: absolute;
+        z-index: -1;
+        left: -150px;
+        border-radius: 340px 300px 480px 100px;
+        background: #8e7097;
+        width: 500px;
+        height: 530px;
+        filter: blur(13px);
+    }
+
+    &__title{
+        font-size: 80px;
+        margin: 0;
+    }
+
+    &__steps{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 50px;
+    }
+
+    &__step{
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__step-ttl{
+        font-size: 40px;
+        font-family: monospace-bold;
+        margin-bottom: 30px;
+    }
+
+    &__step-txt{
+        width: 390px;
+        font-size: 30px;
     }
 }
