--- a/src/style.scss
+++ b/src/style.scss
@@ -129,8 +129,18 @@ body{
 }
 
 .test{
-    p{
-        font-size: 70px;
+    &__box{
+        display: flex;
+        z-index: -5;
+        position: absolute;
+        top: 0;
+        opacity: 2%;
+        height: 100%;
+    }
+
+    &__lorem{
+        font-size: 69px;
+        text-align: center;
     }
 }
 
@@ -188,5 +198,131 @@ body{
     &__step-txt{
         width: 390px;
         font-size: 30px;
+    }
+}
+
+.reviews{
+
+    &__box{
+        margin-top: 90px;
+        display: flex;
+        flex-direction: column;
+        gap: 130px;
+    }
+    
+    &__title{
+        font-size: 100px;
+        margin: 0;
+        color: #d6cab8;
+        text-align: center;
+    }
+
+    &__reviews-box{
+        display: flex;
+        flex-direction: row;
+    }
+
+    &__cards{
+        padding: 0px 60px 0px 60px;
+        display: flex;
+        margin: auto;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__card{
+        display: flex;
+        gap: 7px;
+        flex-direction: column;
+        justify-content: center;
+        background: #8e7097;
+        border: 1px solid #222222;
+        border-radius: 40px;
+        padding: 40px;
+        max-width: 500px;
+        margin-bottom: 25px;
+        box-shadow: inset 0 0 15px #222222;
+    }
+
+    .card{
+        &__name{
+            font-size: 40px;
+        }
+
+        &__rating{
+            font-size: 18px;
+        }
+
+        &__text{
+            font-size: 25px;
+        }
+
+        &__pages{
+            font-size: 21px;
+        }
+    }
+}
+
+.free{
+    &__box{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 150px;
+    }
+
+    &__title{
+        font-size: 100px;
+        text-align: center;
+        margin: 0 0 80px 0;
+    }
+
+    &__text{
+        font-size: 40px;
+        text-align: center;
+    }
+
+    &__button{
+        background-color: #8e7097;
+        border-radius: 60px;
+        padding: 15px 150px;
+        font-size: 50px;
+        text-decoration: none;
+        color: #d6cab8;
+    }
+}
+
+.footer{
+    &__box{
+        display: flex;
+        flex-direction: row;
+        gap: 90px;
+        margin-top: 160px;
+        position: relative;
+        bottom: 0px;
+        backdrop-filter: blur(8px);
+        width: 100%;
+        height: 90px;
+        align-items: center;
+    }
+
+    &__logo{
+        color: #8e7097;
+        text-transform: uppercase;
+        font-size: 40px;
+        margin-right: 100px;
+    }
+
+    &__link{
+        text-decoration: none;
+        color: #d6cab8;
+        cursor: pointer;
+        font-size: 20px;
+    }
+
+    &__text{
+        font-size: 20px;
+        color: #575757;
     }
 }
