calculator visual part

--- a/src/style.scss
+++ b/src/style.scss
@@ -326,3 +326,86 @@ body{
         color: #575757;
     }
 }
+
+.calculator{
+    &__box{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin: 50px;
+    }
+
+    &__title{
+        text-align: center;
+        font-size: 50px;
+        text-transform: uppercase;
+    }
+
+    &__display{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        padding: 25px 90px;
+        border-radius: 15px;
+        width: 400px;
+        background: #d6cab846;
+        border: 1px solid #d6cab8;
+        font-size: 30px;
+        outline: none;
+        color: #d6cab8;
+        pointer-events: none;
+    }
+
+    &__numbers{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__row{
+        display: flex;
+        padding: 10px;
+        gap: 20px;
+
+        &--actions{
+            flex-direction: column;
+            margin-left: 50px;
+        }
+    }
+
+    &__num{
+        padding: 50px;
+        font-size: 30px;
+        border: 1px solid #d6cab8;
+        border-radius: 15%;
+        background: #d6cab83f;
+        color: #d6cab8;
+        transition: 0.5s;
+
+        &:hover{
+            background: #d6cab8;
+            color: #575757;
+            cursor: pointer;
+            border: 1px solid transparent;
+        }
+    }
+
+    &__action{
+        padding: 50px;
+        font-size: 30px;
+        border: 1px solid #d6cab8;
+        border-radius: 15%;
+        background: #d6cab83f;
+        color: #d6cab8;
+        transition: 0.5s;
+
+        &:hover{
+            background: #d6cab8;
+            color: #575757;
+            cursor: pointer;
+            border: 1px solid transparent;
+        }
+    }
+}
